public class Beverage extends MenuItem {

    public Beverage(String name, int cost) {
        super(name, cost);
    }
    
}
