public class Food extends MenuItem {

    public Food(String name, int cost) {
        super(name, cost);
    }
    
}
