import java.util.ArrayList;

public class Menu {
    private MenuType menuType;
    private ArrayList<MenuItem> menuItems;
}
