public enum MenuType {
    COMFORTO, EXECUTIVO;
}
